<resources>
    <string name="app_name">Pop Movies</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rate">Top rate</string>
    <string name="sorted_by">Sorted By:</string>
    <string name="no_movies_available">No movies available</string>
    <string name="poster">Poster</string>
    <string name="rated">Rated:</string>
    <string name="_0">0</string>
    <string name="release_date">Release date:</string>
    <string name="not_available">Not available</string>
    <string name="error">Error</string>
    <string name="can_not_find_movies">Can not find movies</string>
    <string name="can_not_show_details_of_this_movie">Can not show details of this movie</string>
    <string name="mark_as_favorite">MARK AS FAVORITE</string>
    <string name="mark_as_un_favorite">MARK AS UNFAVORITE</string>
    <string name="please_wait">Please wait</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="author">Author:</string>
    <string name="play_trailer">Play trailer</string>
    <string name="settings">Settings</string>
    <string name="movie_detail">MovieDetail</string>
    <string name="pop_movies">Pop Movies</string>
    <string name="top_movies">Top Movies</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="pref_filter_label">Default Filter</string>
    <string name="pref_filter_key" translatable="false">default_filter</string>
    <string name="most_popular_value" translatable="false">most_popular</string>
    <string name="top_rate_value" translatable="false">top_rate</string>
    <string name="favorite_value" translatable="false">favorite</string>
</resources>
